--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
                 <div class="flex">
                     <div id="form_name"><input type="text" name="name" placeholder="Your name..."></div>
                     <div id="form_email"><input type="email" name="email" placeholder="Email Address..."></div>
-                    <div id="form_textarea" style="resize: none;"><textarea name="textarea" placeholder="Please leave your comments..."></textarea></div>
+                    <div id="form_textarea"><textarea name="textarea" placeholder="Please leave your comments..." style="resize: none;"></textarea></div>
                     <div><input type="submit" name="submit" value="S E N D"></div>
                 </div>
             </form>
