--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Spa</title>
         <link rel="icon" href="favicon.png">
         <link rel="stylesheet" href="styles.css" type="text/css">
